# cpputest-example

./: CMakeLists.txt  README.md
unittests/: CMakeLists.txt  test-mysum.cpp
